<resources>
    <string name="request_code">リクエストコード</string>
    <string name="alarm_id">アラームID</string>
    <!--    <string name="app_name">Zekki_kaihi_alarm</string>-->
    <string name="app_name">絶起回避アラーム\nEXT-LARM</string>
    <string name="app_label_name">EXT-LARM</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_license">License</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Settings -->
    <string name="sound_header">Sound</string>
    <string name="alarm_header">Alarm settings</string>
    <string name="alarm_type_title">Alarm type</string>
    <string name="alarm_timing_title">Timing</string>
    <string name="alarm_sound">Alarm sound</string>
    <string name="alarm_type_AV">Alarm and Vibration</string>
    <string name="alarm_type_A">Alarm Only</string>
    <string name="alarm_type_V">Vibration Only</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Input Activity -->
    <string name="InputTabLeft">About Alarm</string>
    <string name="InputTabCenter">Time</string>
    <string name="InputTabRight">Sub Alarm</string>
    <string name="SaveBottom">保存</string>
    <string name="AlarmTitleHint">アラームタイトルを入力</string>
    <string name="Next">次へ</string>
    <string name="Add"><追加></追加></string>
    <string name="alarm_save_done">alarm save done.</string>
    <string name="input_setting">Sound</string>

    <!-- Delete Activity -->
    <string name="DeleteBottom">削除</string>

    <!-- When alarm ring Activity -->
    <string name="AlarmNameTag">このアラーム→</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>