<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/sound_header">

        <ListPreference
            app:defaultValue="Alarm and Vibration"
            app:entries="@array/alarm_type_entries"
            app:entryValues="@array/alarm_type_values"
            app:key="alarm_type"
            app:title="@string/alarm_type_title"
            android:summary="%s"/>

<!--        <RingtonePreference-->
<!--            android:defaultValue="@string/alarm_type_AV"-->
<!--            android:key="alarm_sound"-->
<!--            android:ringtoneType="all"-->
<!--            android:showDefault="true"-->
<!--            android:showSilent="true"-->
<!--            android:title="@string/alarm_sound" />-->

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/alarm_header">
        <ListPreference
            app:defaultValue="recent"
            app:entries="@array/alarm_schedule_entries"
            app:entryValues="@array/alarm_schedule_values"
            app:key="alarm_schedule"
            app:title="@string/alarm_timing_title"
            android:summary="%s"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>